# udon-decompiler

./: .clang-format  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  UdonDecompiler.slnx  UdonModuleInfoExtractor.cs  main.py  nightly-badge.json  nightly-meta.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  compile-test-cases.yml  docs.yml  generate-udon-module-info.yml  release.yml
Editor/: UdonModuleInfoExtractor.cs  UdonProgramDumper.cs  UdonProgramDumperGUI.cs  UdonProgramReserializer.cs  UdonSharpSourceTextCompiler.cs  UdonSharpSourceTextCompilerCLI.cs  UdonSharpSourceTextCompilerGUI.cs
docs/: book.typ  introduction.typ
docs/_utils/: common.typ  gh-pages.typ
docs/about/: impact.typ  me.typ  motivation.typ
docs/dev/: contributing.typ  status.typ  structure.typ
docs/for-llm/: AGENTS.md  CONTEXT.md
docs/user/: installation.typ  reporting-issues.typ  usage.typ
docs/user-en/: installation.typ  reporting-issues.typ  usage.typ
scripts/: bump-version.ts  case-md.ts
src/: __init__.py  lib.rs  logging.rs  main.rs  str_constants.rs
src/analysis/: __init__.py  cfg.py  control_flow.py  expression_builder.py
src/codegen/: __init__.py  ast_nodes.py  code_generator.py  formatter.py
src/decompiler/: basic_block.rs  cfg.rs  clang_format.rs  codegen.rs  context.rs  indir_jump_analysis.rs  instruction_list.rs  mod.rs  module_info.rs  pipeline.rs  variable.rs
src/loaders/: module_info_loader.py  program_loader.py
src/models/: __init__.py  instruction.py  module_info.py  program.py
src/odin/: edit.rs  io.rs  mod.rs  model.rs  parse.rs  serialize.rs  udon_program.rs  udon_variable_table.rs
src/parsers/: __init__.py
src/udon_asm/: analysis.rs  apply.rs  codec.rs  disassemble.rs  mod.rs  parse.rs  text.rs  types.rs
src/util/: asset.rs  b64.rs  hex.rs  mod.rs  naming.rs
tests/: HelloWorld.cs  RotatingCube.cs  decompile_case.py  e2e.rs  test_snapshots.py
tests/ci/: case_md.py  md_cases.py
tests/snapshots/: e2e__basic__ExpressionInline.snap  e2e__basic__ExternalCall.snap  e2e__basic__HiddenInternalFunction.snap  e2e__basic__InternalCall.snap  e2e__basic__Operators.snap  e2e__basic__OutParameter.snap  e2e__basic__ThisReference.snap  e2e__basic__VariableScope.snap  e2e__control_flow__ComplexControlFlow.snap  e2e__control_flow__DoWhile.snap  e2e__control_flow__For.snap  e2e__control_flow__If.snap  e2e__control_flow__IfElse.snap  e2e__control_flow__ShortCircuit.snap  e2e__control_flow__SwitchCaseLong.snap  e2e__control_flow__SwitchCaseShort.snap  e2e__control_flow__While.snap  e2e__issues__13.snap  e2e__issues__14.snap  e2e__issues__7.snap  e2e__real_world__QvPen__QvPen_ClearAllButton.snap  e2e__real_world__QvPen__QvPen_ClearButton.snap  (+12 more)
udon_decompiler/: __init__.py  __main__.py
(+198 files in other folders)
