[package]
name = "udon-decompiler"
version = "0.1.0"
edition = "2024"
default-run = "udon-decompiler"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unity-asset-yaml = "0.2.0"
walkdir = "2.4"

[dev-dependencies]
insta = "1.43"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
