[project]
name = "udon-decompiler"
version = "0.1.0"
description = "The Udon Decompiler"
authors = [{ name = "ParaN3xus", email = "paran3xus007@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clang-format>=21.1.8",
    "networkx>=3.6",
    "numba-scfg>=0.0.8",
    "pydot>=4.0.1",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "syrupy>=5.0.0", "ruff>=0.9.0", "pyright>=1.1.408"]

[project.scripts]
udon-decompiler = "udon_decompiler.__main__:main"

[tool.setuptools.packages.find]
include = ["udon_decompiler*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E501"]

[tool.pyright]
typeCheckingMode = "basic"
reportMatchNotExhaustive = "error"

include = ["udon_decompiler"]
exclude = ["**/__pycache__", ".venv"]
